--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,38 @@
-<h1><%= @list.name %></h1>
+<h1>
+  <%= @list.name %>
+  <% if @list.photo.key %>
+    <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+  <% end %>
+</h1>
 
 <%= link_to 'Créer un Bookmark', new_list_bookmark_path(@list) %>
 
-
-<%# AFFICHER LES BOOKMARS DANS SHOW  BOOKMARK NIL %>
-
 <ul>
-    <% @bookmarks.each do |book| %>
+  <% @bookmarks.each do |book| %>
     <li>
-       <p><%= book.movie.title %> - <%= book.comment %>
-       <%= link_to 'effacer', bookmark_path(book),
-                method: :delete,
-                data: { confirm: "Are you sure?" } %></p>
+      <p>
+        <%= book.movie.title %> - <%= book.comment %>
+        <%= link_to 'effacer', bookmark_path(book),
+          method: :delete,
+          data: { confirm: "Are you sure?" }
+        %>
+      </p>
     </li>
-    <% end %>
-  </ul>
+  <% end %>
+</ul>
+
+<%= simple_form_for([@list, @review]) do |f| %>
+  <%= f.input :content %>
+  <%= f.submit %>
+<% end %>
+
+<h3>Reviews</h3>
+<ul>
+  <% @reviews.each do |review| %>
+    <li>
+      <%= review.content %>
+    </li>
+  <% end %>
+</ul>
+
+<%= console %>
