ok review blank

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,18 +8,16 @@
 <%= link_to 'Créer un Bookmark', new_list_bookmark_path(@list) %>
 
 <ul>
-  <% if @bookmarks %>
-    <% @bookmarks.each do |book| %>
-      <li>
-        <p>
-          <%= book.movie.title %> - <%= book.comment %>
-          <%= link_to 'effacer', bookmark_path(book),
-            method: :delete,
-            data: { confirm: "Are you sure?" }
-          %>
-        </p>
-      </li>
-      <% end %>
+  <% @list.bookmarks.each do |book| %>
+    <li>
+      <p>
+        <%= book.movie.title %> - <%= book.comment %>
+        <%= link_to 'effacer', bookmark_path(book),
+          method: :delete,
+          data: { confirm: "Are you sure?" }
+        %>
+      </p>
+    </li>
   <% end %>
 </ul>
 
@@ -30,11 +28,9 @@
 
 <h3>Reviews</h3>
 <ul>
-  <% if @reviews %>
-    <% @reviews.each do |review| %>
-      <li>
-        <%= review.content %>
-      </li>
-    <% end %>
+  <% @list.reviews.each do |review| %>
+    <li>
+      <%= review.content %>
+    </li>
   <% end %>
 </ul>
